_tests/E140/DLL/Include/Lusbapi.h






	// ==========================================================================
	// *************************** Модуль E14-140 *******************************
	// ==========================================================================
	// доступные индексы диапазонов входного напряжения модуля E14-140
	enum {	ADC_INPUT_RANGE_10000mV_E140, ADC_INPUT_RANGE_2500mV_E140, ADC_INPUT_RANGE_625mV_E140, ADC_INPUT_RANGE_156mV_E140, INVALID_ADC_INPUT_RANGE_E140 };

	// доступные индексы источника тактовых импульсов для АЦП
	enum {	INT_ADC_CLOCK_E140, EXT_ADC_CLOCK_E140, INVALID_ADC_CLOCK_E140 };

	// доступные индексы управления трансляцией тактовых импульсов АЦП
	// на линию SYN внешнего цифрового разъёма (только при внутреннем
	// источнике тактовых импульсоц АЦП)
	enum {	ADC_CLOCK_TRANS_DISABLED_E140, ADC_CLOCK_TRANS_ENABLED_E140, INVALID_ADC_CLOCK_TRANS_E140 };

	// возможные типы синхронизации модуля E14-140
	enum { 	NO_SYNC_E140, TTL_START_SYNC_E140, TTL_KADR_SYNC_E140, ANALOG_SYNC_E140, INVALID_SYNC_E140 };

	// возможные опции наличия микросхемы ЦАП
	enum {	DAC_INACCESSIBLED_E140, DAC_ACCESSIBLED_E140, INVALID_DAC_OPTION_E140 };

	// доступные индексы ревизий модуля E14-140
	enum {	REVISION_A_E140, REVISION_B_E140, INVALID_REVISION_E140 };

	// доступные индексы синхронизации потоковой работы ЦАП и АЦП
	enum {	DIS_ADC_DAC_SYNC_E140, ENA_ADC_DAC_SYNC_E140, INVALID_ADC_DAC_SYNC_E140 };


	// константы для работы с модулем
	enum 	{
				MAX_CONTROL_TABLE_LENGTH_E140 = 128,
				ADC_INPUT_RANGES_QUANTITY_E140 = INVALID_ADC_INPUT_RANGE_E140,
				ADC_CALIBR_COEFS_QUANTITY_E140 = ADC_INPUT_RANGES_QUANTITY_E140,
				DAC_CHANNELS_QUANTITY_E140 = 0x2, DAC_CALIBR_COEFS_QUANTITY_E140 = DAC_CHANNELS_QUANTITY_E140,
				TTL_LINES_QUANTITY_E140 = 0x10,	  		// кол-во цифровых линий
				USER_FLASH_SIZE_E140 = 0x200,   			// размер области пользовательского ППЗУ в байтах
				REVISIONS_QUANTITY_E140 = INVALID_REVISION_E140,		// кол-во ревизий (модификаций) модуля
			};
	// структура с информацией об модуле E14-140
	struct MODULE_DESCRIPTION_E140
	{
		MODULE_INFO_LUSBAPI     Module;		// общая информация о модуле
		INTERFACE_INFO_LUSBAPI  Interface;	// информация об используемом интерфейсе
		MCU_INFO_LUSBAPI<VERSION_INFO_LUSBAPI>		Mcu;	// информация о микроконтроллере
		ADC_INFO_LUSBAPI        Adc;			// информация о АЦП
		DAC_INFO_LUSBAPI        Dac;			// информация о ЦАП
		DIGITAL_IO_INFO_LUSBAPI DigitalIo;	// информация о цифровом вводе-выводе
	};

	// структура пользовательского ППЗУ модуля E14-140
	struct USER_FLASH_E140
	{
		BYTE Buffer[USER_FLASH_SIZE_E140];
	};

	// структура, задающая режим работы АЦП для модуля E14-140
	struct ADC_PARS_E140
	{
		WORD ClkSource;							// источник тактовых импульсов для запуска АПП
		WORD EnableClkOutput;					// разрешение трансляции тактовых импульсов запуска АЦП
		WORD InputMode;							// режим ввода даных с АЦП
		WORD SynchroAdType;						// тип аналоговой синхронизации
		WORD SynchroAdMode; 						// режим аналоговой сихронизации
		WORD SynchroAdChannel;  				// канал АЦП при аналоговой синхронизации
		SHORT SynchroAdPorog; 					// порог срабатывания АЦП при аналоговой синхронизации
		WORD ChannelsQuantity;					// число активных каналов
		WORD ControlTable[128];					// управляющая таблица с активными каналами
		double AdcRate;							// частота работы АЦП в кГц
		double InterKadrDelay;					// межкадровая задержка в мс
		double KadrRate;							// частота кадра в кГц
	};

	// структура, задающая режим потоковой работы ЦАП для модуля E14-140
	struct DAC_PARS_E140
	{
		BYTE SyncWithADC;							// 0 = обычный пуск ЦАП; !0 = синхронизировать с пуском АЦП
		BYTE SetZeroOnStop;						// !0 = при остановке потокового вывода установить на выходе ЦАП 0 В
		double DacRate;							// частота работы ЦАП в кГц
	};